# tutorial_2018-1

./: .gitignore  2.cpp  README.md  hello.cpp  palindromes.cpp  秦晓宇的vim学习.doc
Ethel林红雨/1_week/: g++.docx  vim.docx
Ethel林红雨/1_week/hello_world/: README.txt  new.cpp
LAM林建乐/2_week/programming_exercise/: IP_Network.cpp
LAM林建乐/3_week/: README.md  main.cpp  test.cpp
Week_1/HelloWorld_Project/: HelloWorld.cpp
Week_1/Palindromes/: a.out  palindromes.cpp
docs/: task.md  team_code_style.md  tutorial.md
docs/exercises/: digit_exercise.md  programming_exercise.md  projects.md  shell_exercise.md  timer_exercise.md
examples_and_samples/hard_samples/: answers.txt
gene钟志聪/1_week/: vim.docx
gene钟志聪/1_week/hello_world/: hello_world  hello_world.c
gene钟志聪/1_week/programming_exercise/: git.docx  task  task1.cpp
gene钟志聪/2_week/programming_exercise/: ip_address
gene钟志聪/2_week/shell_exercise/: assignment_1.sh  assignment_2.sh  assignment_3.sh
gene钟志聪/2_week/timer_exercise/: CMakeLists.txt  Readme.md  main.cpp  timer.cpp  timer.hpp
scary郭佳鑫/1_week/programming_exercise/: Palindromes.cpp
task_submit/: README.md  git的原理及分支（秦晓宇）.doc  曾向进
task_submit/Chenc/: README.md
task_submit/Chenc/1_week/: .~lock.Git的工作流程及分支.docx#  Git的工作流程及分支.docx  对于vim的操作和命令的学习.docx
task_submit/Chenc/2_week/: README.md
task_submit/Chenc/3_week/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
task_submit/Chenc/3_week (copy)/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
task_submit/Chenc/3_week/include/: Degree.hpp
task_submit/Chenc/3_week/src/: Degree.cpp  LEDdetect.cpp  Process.cpp
task_submit/Chenc/project/1_SIFT/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  descriptor1.txt  descriptor2.txt
task_submit/Chenc/project/1_SIFT/include/: sift.hpp
task_submit/Chenc/project/1_SIFT/src/: main.cpp  sift.cpp
task_submit/Chenc/project/2_FLOW/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
task_submit/Chenc/project/2_FLOW/include/: flow.hpp
task_submit/Chenc/project/2_FLOW/src/: flow.c  flow.cpp  main.cpp  myflow.c
task_submit/Chris王星宇/1_week/: Vim命令.docx  git入门.docx
task_submit/Denny刘嘉琦/1_week/: vim常用操作.docx
task_submit/FloyedShen/3_week/: .gitignore
task_submit/FloyedShen/3_week/Digit_Tube/: CMakeLists.txt  Makefile  README.md  test.cpp
task_submit/FloyedShen/3_week/Digit_Tube/inc/: Digit_Tube.h
task_submit/FloyedShen/3_week/Digit_Tube/src/: CMakeLists.txt  Digit_Tube.cpp  Makefile
task_submit/HausinLynn林浩鑫/1_week/: git的原理和分支.docx  vim常用操作或命令.docx
task_submit/HausinLynn林浩鑫/3_week/: .README.md.swp  CMakeLists.txt  Makefile  README.md
task_submit/HausinLynn林浩鑫/3_week/inc/: .digit4_recognize.hpp.swp  digit4_recognize.hpp
task_submit/HausinLynn林浩鑫/3_week/main/: .main.cpp.swp  main.cpp
task_submit/HausinLynn林浩鑫/3_week/src/: .digit4_recognize.cpp.swp  digit4_recognize.cpp
task_submit/Ken李国锵/1_week/: GIT分支理解.doc
task_submit/Ken李国锵/3_week/: CMakeLists.txt  readme.md
task_submit/Ken李国锵/project/: README.md
task_submit/Lomgahong林嘉鸿/1_week/: Vim常用操作和命令.docx  git的工作流程与git分支.docx
task_submit/Lomgahong林嘉鸿/3_week/file/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
task_submit/Lomgahong林嘉鸿/3_week/file/inc/: fun.hpp
task_submit/Lomgahong林嘉鸿/3_week/file/main/: main.cpp
task_submit/Lomgahong林嘉鸿/3_week/file/src/: .fun.cpp.swp  fun.cpp
task_submit/Lucas刘俊宏/1_week/: Vim的常用操作或命令.docx  git的工作流程、分支的原理及合并.docx
task_submit/President/2_week/timer_exercise/: CMakeLists.txt
task_submit/President/2_week/timer_exercise/inc/: timer.hpp
task_submit/President/2_week/timer_exercise/src/: timer.cpp
task_submit/President/2_week/timer_exercise/test/: main.cpp
task_submit/YZ杨卓/3_week/: CMakeLists.txt  README.md  main.cpp
task_submit/ZHX张浩轩/: README.md
task_submit/ZHX张浩轩/1_week/: git.txt  vim.txt
task_submit/ZHX张浩轩/2_week/: README.md
task_submit/ZHX张浩轩/3_week/: CMakeLists.txt  README.md
task_submit/ZHX张浩轩/project/: README.md
task_submit/ZYFsir张云帆/1_week/: VimCommand.md
task_submit/atlanswer赵鑫/1_week/: README.md
task_submit/atlanswer赵鑫/project/Task_2/: CMakeLists.txt  README.md  optical_flow.py
task_submit/atlanswer赵鑫/project/Task_2/inc/: OpticalFlow.hpp  OpticalFlowPX4.hpp  PX4Flow.hpp
task_submit/atlanswer赵鑫/project/Task_2/src/: OpticalFlow.cpp  OpticalFlowPX4.cpp  PX4Flow.cpp  main.cpp
task_submit/endeavor04王欣/1_week/: GIT  (+1 more)
task_submit/feipeng马飞鹏/3_week/: .merg.cpp.swp  .processing.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compare_pic.cpp  compare_pic.h  merg.cpp  merg.h  processing  processing.cpp  tell_digital.cpp  tell_digital.h
task_submit/feipeng马飞鹏/3_week/picture/: README.md
task_submit/fengyw8冯颖雯/3_week/: CMakeLists.txt  README.md
task_submit/fengyw8冯颖雯/3_week/include/: utility.h
task_submit/fengyw8冯颖雯/3_week/src/: DigitRecognization.cpp
task_submit/lhz_demo/3_week/act_sample/: CMakeLists.txt  README.md
task_submit/lhz_demo/3_week/act_sample/inc/: .tube2.hpp.swo  tube2.hpp
task_submit/lhz_demo/3_week/act_sample/src/: main.cpp  tube2.cpp
task_submit/zhanghh_张灏桓/project/2/: CMakeLists.txt  README.md  main.cpp
task_submit/zhangniansong张年崧/3_week/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
task_submit/zhangniansong张年崧/3_week/include/: ImageRecify.hpp  lineidentify.hpp  perspective.hpp  preprocess.hpp
task_submit/zhangniansong张年崧/3_week/src/: ImageRecify.cpp  lineidentify.cpp  main.cpp  perspective.cpp  preprocess.cpp
task_submit/zhangniansong张年崧/project/SIFT/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
task_submit/zhangniansong张年崧/project/SIFT/include/: Sift.h  sift.cpp
task_submit/zhangniansong张年崧/project/SIFT/src/: SiftHelpers.h  main.cpp
yzstr朱浩男/1_week/: git原理.docx  vim操作.docx
yzstr朱浩男/2_week/timer_exercise/: .gitignore  CMakeLists.txt  Makefile  README.md  Timer.cpp  Timer.hpp  main.cpp
张涵健/1_week/: git.docx  vim.docx
张涵健/2_week/: makefile
张涵健/3_week/: README.md
(+800 files in other folders)
