cmake_minimum_required(VERSION 2.8)
project( Timer )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Timer main.cpp timer.hpp timer.cpp)
find_package(Threads)
target_link_libraries (${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries( Timer ${OpenCV_LIBS} )
