cmake_minimum_required(VERSION 2.8)
project(detect_numbers)
find_package(OpenCV REQUIRED)
if(CMAKE_VERSION VERSION_LESS "2.8.11")
  include_directories(${OpenCV_INCLUDE_DIRS})
endif()
add_executable(processing processing.cpp tell_digital.cpp compare_pic.cpp merg.cpp)
target_link_libraries(processing ${OpenCV_LIBS})
