PROJECT(Timer)
SET (CMAKE_CXX_STANDARD 11)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 
FIND_PACKAGE( OpenCV REQUIRED )
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
AUX_SOURCE_DIRECTORY(src DIR_SRCS)
MESSAGE(STATUS "Src file: ${DIR_SRCS}")
ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})
TARGET_LINK_LIBRARIES( Timer ${OpenCV_LIBS} )




